# iliasScraper

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
src/: config.rs  course.rs  ilias.rs  main.rs
src/auth/: mod.rs  provider.rs
src/auth/shibboleth/: credentials.rs  login.rs  mod.rs  provider.rs  session_store.rs
src/cli/: auto_complete.rs  ilias_cli.rs  mod.rs
src/scraper/: mod.rs  scrapable.rs  scrape_object.rs  scrape_options.rs  scrape_type.rs  scraper.rs
src/scraper/scrapeables/: builder.rs  folder.rs  link.rs  link_library.rs  media_library.rs  mod.rs  request.rs  submission.rs  submissions.rs  video.rs
src/tree/: downloadable.rs  linkable.rs  local_tree_handler.rs  local_tree_node.rs  mod.rs  printable.rs  scrape_object.rs  tree_comparer.rs  tree_connector.rs  tree_node.rs
src/utils/: sanitize.rs
