[package]
name = "ilias"
description = "A command-line tool to scrape data from Ilias."
version = "2.3.0"
authors = ["Felix Schmitt"]
edition = "2021"
build = "build.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
reqwest = {version = "0.12.28", features = ["cookies", "stream"]}
url = "2.5.8"
scraper = "0.25.0"
urlencoding = "2.1.3"
termcolor = "1.4.1"
serde_json = "1.0.148"
html-escape = "0.2.13"
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
crossbeam-queue = "0.3.12"
uuid = { version = "1.19.0", features = ["v4"] }
dashmap = "7.0.0-rc2"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
futures-util = "0.3.31"
indicatif = "0.18.3"
clap = { version = "4.5.54", features = ["derive"] }
inquire = "0.9.1"

[build-dependencies]
winres = "0.1.12"
